examples/test/testpolicy4557.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4557
  namespace: namespace73
spec:
  podSelector:
    matchLabels:
      key7: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value2
          key47: value40
          key46: value35
      podSelector:
        matchLabels:
          key19: value47
          key43: value48
